<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LiveWallpaper</string>
    <string name="app_description">GTUG Dallas, LiveWallpaper demo</string>
    
    <string name="settings">Settings</string>
    <string name="circle_color">Circle Color</string>
    <string name="circle_color_summary">Modify the color of the circle drawn.</string>
    <string name="circle_radius">Circle Radius</string>
    <string name="circle_radius_summary">Modify the radius of the circle drawn.</string>
    <string name="background_color">Background Color</string>
    <string name="background_color_summary">Modify the background color of the live wallpaper.</string>
    
</resources>
